syntax = "proto3";

package api;

service EchoService {
	rpc Echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
	string message = 1;
}

message EchoResponse {
	string message = 1;
	int32 message_count = 2;
}
